# rust_learning_openrouter_request

./: Cargo.toml  README.md
src/: main.rs
