[package]
name = "openrouter-usage"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
futures-util = "0.3"
dotenvy = "0.15"
colored = "2.0"
indicatif = "0.17"
